--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".MainActivity">
+    tools:context=".homescreen.HomeScreenActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar_main"
@@ -21,7 +21,7 @@
             app:layout_scrollFlags="exitUntilCollapsed|scroll"
             app:contentScrim="?colorPrimary">
 
-            <com.swapyx.audiostreamer.audiostreamer.SquareFrameLayout
+            <com.swapyx.audiostreamer.audiostreamer.custom.SquareFrameLayout
                 android:id="@+id/record_frame"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -32,7 +32,7 @@
                 <include
                     layout="@layout/record_layout"/>
 
-            </com.swapyx.audiostreamer.audiostreamer.SquareFrameLayout>
+            </com.swapyx.audiostreamer.audiostreamer.custom.SquareFrameLayout>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar_main"
