--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorAccent">#37567A</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="homescreen_colorPrimaryDark">@color/colorPrimary</color>
-    <color name="homescreen_record_frame_background_color">#00223d</color>
-    <color name="homescreen_record_color">#f0ffffff</color>
+    <color name="record_frame_background_color">#00223d</color>
+    <color name="record_button_color">#f0ffffff</color>
+    <color name="colorRed500">#F44336</color>
 </resources>
