--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="record_frame_background_color">#00223d</color>
     <color name="record_button_color">#f0ffffff</color>
     <color name="colorRed500">#F44336</color>
+    <color name="divider_color">#ffd8d8d8</color>
+    <color name="colorBlack">#000000</color>
 </resources>
